# transcendence-backend

./: .editorconfig  .env.example  .gitignore  README.md  main.py  package.json  pyproject.toml  tsconfig.json
app/: __init__.py  env.py  main.py
app/core/: database.py  env.py  security.py
app/models/: __init__.py  user.py
app/routes/: __init__.py  auth.py  user.py
app/schemas/: auth.py  user.py
app/services/: auth.py
data/: data.sqlite
fastgres/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
fastgres/scripts/: entrypoint.sh  setup_secrets.sh
fastgres/src/: classes.py  crud.py  database.py  heroes.py  main.py  models.py  old_main.py  utils.py
models/: __init__.py
src/: data-source.ts  index.ts
src/config/: env.schema.ts  ormconfig.ts
src/entities/: user.entity.ts
src/routes/: user.route.ts
src/schemas/user/: user.schema.ts
src/services/: user.service.ts
src/types/: fastify.d.ts
