[project]
name = "fastgres"
version = "0.1.0"
description = "labs working with fastapi and uvicorn"
authors = [
    {name = "Manoa Rabenja",email = "manoarabenja@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.124.4,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "sqlmodel",
    "psycopg[binary]"
]

# --- ADD THIS SECTION BELOW ---
[tool.poetry]
package-mode = false
# ------------------------------

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
